# VexRiscv

./: .gitignore  Makefile
sim/: .gitignore  CMakeLists.txt  Makefile  SetChip.v  baz-c.s  baz.c  baz.dump.s  baz.hex  baz.s  bcsr.h  crt.s  data.h  data_test.c  linker.ld  main.asm  main.c  print.h  setutil.h  testbench-soc.cpp  uart.h
sim/cases/: .gitignore  Makefile  startup.c
sim/cases/serial/: entry.S  linker.ld  startup.c
src/main/scala/: Gen.scala
src/main/scala/set/: Gen.scala  PerfUnit.scala  SetCountPlugin.scala  SetDiffPlugin.scala  SetInstPlugin.scala  SetInterPlugin.scala  SetTablePlugin.scala
src/main/scala/vexriscv/: VexRiscv.scala
src/main/scala/vexriscv/plugin/: HazardSimplePlugin.scala  RegFilePlugin.scala  SetInterPlugin.scala
